cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_131.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_ecb.c:42: error: DEAD_STORE
  The value written to &l (type unsigned int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_ecb.c:42:5: Write of unused value
40.       l = d[1];
41.       l2n(l, out);
42.       l = d[0] = d[1] = 0;
          ^
43.   }
